@@ -111,7 +111,7 @@ setMethod(
 	  #Note dendrogram here is the cluster dendrogram
       phylo4Obj<-.convertToPhyClasses(dendro,"phylo4",convertNode=TRUE,convertTips=TRUE)
       clChar<-as.character(cl)
-	  tipLabels(phylo4Obj)<-gsub("ClusterId","",tipLabels(phylo4Obj))
+	  phylobase::tipLabels(phylo4Obj)<-gsub("ClusterId","",phylobase::tipLabels(phylo4Obj))
       allTipNames<-phylobase::labels(phylo4Obj)[phylobase::getNode(phylo4Obj,  type=c("tip"))]
       if(!identical(sort(unname(allTipNames)),sort(unname(unique(clChar))))) stop("tip names of dendro don't match cluster vector values")
       
