@@ -2,12 +2,15 @@ Changes in version 2.1.5-9002 ( Release date: )
 ==============
 
 Changes:
+* MAJOR CHANGE TO CLASS: the dendrogram is now stored in the object as the S4 class `phylo4d` in the package `phylobase`. This allows easier manipulation of the dendrogram by the user (including user-defined dendrograms), as well as allowing storage of information about dendrogram nodes that the programs can make use of. 
 * Changed `makeDendrogram` so that the samples dendrogram is made faster. Previously by the (time-consuming) process of running `hclust` with "fake data" where each sample was mediod of cluster. Now the sample dendrogram is created by manually pasting a (arbitrary) binary tree of the samples with zero-length edges onto the cluster's hierarchical tree.
 * cluster names like `m1`, `m2` given by `mergeClusters` or `c1`, `c2` by `makeConsensus` will now be `m01`, `m02`, etc. This will help in the sorting correctly by cluster names. If needed (i.e. there are more than 100 clusters) the numbers will be augmented to `m001`, more than 1000 to `m0001`.
 * The argument `replaceCoClustering` in `clusterSingle` has been changed to `saveSubsamplingMatrix` and the default behavior of when the subsampling matrix is changed has been modified. See `clusterSingle`.
 * Add argument `whichClusters` to `getBestFeatures`
 Bugs:
 * Fixed bug in `tableClusters` that prevented option `useNames` from being passed if `whichClusters` argument was not given.
+* `getBestFeatures` now returns `ContrastName` and `InternalName`, where `ContrastName` is now parsed to match the user-defined cluster/node names, while `InternalName` uses the internal, fixed names. (Previous versions returned a data.frame with the column `ContrastName` using only the internal fixed names and there was no column `InternalName`).
+
 
 Changes in version 2.1.5 ( Release date: 2018-06-28)
 ==============
